# rust_simple_backend

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/application/: mod.rs
src/application/controller/: user.rs
src/application/dto/: user_dto.rs
src/application/error/: mod.rs
src/application/mapper/: mod.rs  transform_user_entity_to_dto.rs
src/application/request_dto/: create_user_dto.rs  update_user_dto.rs
src/application/usecases/: create_user.rs  get_user.rs  mod.rs  update_user.rs
src/domain/user/entities/: mod.rs
src/domain/user/services/: mod.rs
src/infrastructure/repositories/user/: mod.rs
src/infrastructure/repositories/user/schema/: mod.rs
src/infrastructure/services/database/: mod.rs
