[package]
name = "simple_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.18.0"
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
validator = { version = "0.16.1", features = ["derive"]}
lazy_static = "1.4.0"
regex = "1.9.5"

[dependencies.mongodb]
version = "2.6.1"
features = ["tokio-sync"]
